Actualización de doc de error en liberación tipo cambio 7

--- a/docs/acumatica/override-release-arinvoice-colored.mdx
+++ b/docs/acumatica/override-release-arinvoice-colored.mdx
@@ -1,4 +1,3 @@
-
 ---
 id: override-release-arinvoice-colored
 title: Override de Release en ARInvoiceEntry con validaciones previas
@@ -7,7 +6,7 @@ description: Patrón correcto con PXOverride para validar comisiones, fecha y ti
 sidebar_position: 10
 ---
 
-<style>
+<style>{`
 /* Estilo oscuro tipo VS Dark aplicado SOLAMENTE a esta página */
 :root .markdown pre, 
 :root .markdown code, 
@@ -41,7 +40,7 @@ sidebar_position: 10
   color:#d4d4d4 !important;
   border-bottom:1px solid #333 !important;
 }
-</style>
+`}</style>
 
 # Override de **Release** en `ARInvoiceEntry` con validaciones previas
 
